objects/Registration__c.object
<CustomObject>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <label>Distributor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Distributor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Registrations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2T</fullName>
                </value>
                <value>
                    <fullName>3T</fullName>
                </value>
                <value>
                    <fullName>DTC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Registration</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Registration No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registrations</pluralLabel>
    <recordTypes>
        <fullName>State_Registration</fullName>
        <active>true</active>
        <label>State Registration</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>